--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Radiation Tracker</title>
+
+  <!-- CSS files -->
   <link rel="stylesheet" href="style.css" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+e2I7n7MDrSfmvx6jhM/8g0uFvIoei3DILp/YZzCk="
+    crossorigin=""
+  />
 </head>
 <body>
   <div class="container">
@@ -24,8 +32,3 @@
       <h3>Historical Data (past 5 days):</h3>
       <ul id="history"></ul>
     </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
