--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Radiation Tracker</title>
-  <link rel="stylesheet" href="style.css" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+e2I7n7MDrSfmvx6jhM/8g0uFvIoei3DILp/YZzCk="
-    crossorigin=""
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+e2I7n7MDrSfmvx6jhM/8g0uFvIoei3DILp/YZzCk=" crossorigin="" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      background: #f0f0f0;
       padding: 20px;
       text-align: center;
     }
 
     .container {
-      max-width: 600px;
+      max-width: 800px;
       margin: auto;
+      background: #fff;
       padding: 20px;
-      background: white;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
-    .data-box {
-      margin-top: 20px;
-      text-align: left;
+    h1 {
+      color: #cc0000;
     }
 
-    .map-box {
-      height: 300px;
+    .data-box {
       margin-top: 20px;
+    }
+
+    #map {
+      height: 400px;
+      width: 100%;
+      margin-top: 20px;
+      border: 2px solid #ddd;
       border-radius: 10px;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <h1>☒️ Radiation Tracker</h1>
@@ -59,51 +61,44 @@
       <ul id="history"></ul>
     </div>
 
-    <div id="map" class="map-box"></div>
+    <div id="map"></div>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-pMprtkFS86AU5TzNKj1qS+c8lfIrYk91Gz3GmxP7rNA="
-    crossorigin=""></script>
+    integrity="sha256-pMprtkFS86AU5TzNKj1qS+c8lfIrYk91Gz3GmxP7rNA=" crossorigin=""></script>
   <script>
-    const locationCoords = {
-      nyc: [40.7128, -74.006],
-      tokyo: [35.6762, 139.6503],
-      chernobyl: [51.2768, 30.2219]
+    const radiationData = {
+      nyc: { lat: 40.7128, lon: -74.0060, current: 0.12, history: [0.11, 0.10, 0.12, 0.13, 0.12] },
+      tokyo: { lat: 35.6895, lon: 139.6917, current: 0.09, history: [0.10, 0.09, 0.08, 0.09, 0.10] },
+      chernobyl: { lat: 51.2766, lon: 30.2219, current: 2.75, history: [2.70, 2.72, 2.74, 2.76, 2.75] },
     };
 
-    const map = L.map('map').setView(locationCoords.nyc, 5);
+    const locationSelect = document.getElementById("location");
+    const currentEl = document.getElementById("current");
+    const historyEl = document.getElementById("history");
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: 'Map data © <a href="https://openstreetmap.org">OpenStreetMap</a> contributors'
+    let map = L.map("map").setView([40.7128, -74.0060], 10);
+
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    let marker = L.marker(locationCoords.nyc).addTo(map);
+    let marker = L.marker([40.7128, -74.0060]).addTo(map);
 
-    document.getElementById("location").addEventListener("change", function() {
-      const loc = this.value;
-      const coords = locationCoords[loc];
-      map.setView(coords, 5);
-      marker.setLatLng(coords);
-      updateRadiationData(loc);
-    });
+    function updateData() {
+      const loc = locationSelect.value;
+      const data = radiationData[loc];
 
-    function updateRadiationData(loc) {
-      const current = (Math.random() * 2 + 0.2).toFixed(2);
-      document.getElementById("current").textContent = `${current} μSv/h`;
+      currentEl.textContent = `${data.current} μSv/h`;
+      historyEl.innerHTML = data.history.map(val => `<li>${val} μSv/h</li>`).join("");
 
-      const history = document.getElementById("history");
-      history.innerHTML = "";
-
-      for (let i = 0; i < 5; i++) {
-        const level = (Math.random() * 2 + 0.2).toFixed(2);
-        const li = document.createElement("li");
-        li.textContent = `Day ${5 - i}: ${level} μSv/h`;
-        history.appendChild(li);
-      }
+      marker.setLatLng([data.lat, data.lon]);
+      map.setView([data.lat, data.lon], 10);
     }
 
-    updateRadiationData("nyc");
+    locationSelect.addEventListener("change", updateData);
+    updateData();
   </script>
 </body>
+
 </html>
