--- a/locations.html
+++ b/locations.html
@@ -18,17 +18,25 @@
     <section>
       <h2>New York</h2>
       <p>New York has background radiation from natural sources like radon gas, building materials, and cosmic rays due to its high-rise buildings. It also has some radiation from medical procedures due to its large healthcare industry.</p>
-    </section>
+ <h2>New York</h2>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Manhattan_at_Dusk_by_slonecker.jpg/640px-Manhattan_at_Dusk_by_slonecker.jpg" alt="New York City skyline" style="width: 100%; max-width: 500px; height: auto;">  
+  </section>
 
     <section>
       <h2>Tokyo</h2>
       <p>Tokyo experienced increased radiation concerns after the Fukushima Daiichi nuclear disaster in 2011. Although Tokyo is about 140 miles from Fukushima, trace levels of radiation were detected in the city, leading to temporary public health alerts.</p>
-    </section>
+     <h2>Tokyo</h2>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Tokyo_Tower_and_around_Skyscrapers.jpg/640px-Tokyo_Tower_and_around_Skyscrapers.jpg" alt="Tokyo city view" style="width: 100%; max-width: 500px; height: auto;">
+  <p>Tokyo experienced increased radiation concerns after the Fukushima Daiichi nuclear disaster in 2011...</p>
+ </section>
 
     <section>
       <h2>Chernobyl</h2>
       <p>Chernobyl, Ukraine, was the site of the worst nuclear power plant accident in history in 1986. The explosion released large amounts of radioactive materials into the environment, and the nearby area remains highly radioactive today.</p>
-    </section>
+    <h2>Chernobyl</h2>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Chernobyl_nuclear_power_plant%2C_Ukraine.jpg/640px-Chernobyl_nuclear_power_plant%2C_Ukraine.jpg" alt="Chernobyl nuclear plant" style="width: 100%; max-width: 500px; height: auto;">
+  <p>Chernobyl, Ukraine, was the site of the worst nuclear accident in history in 1986...</p>
+</section>
   </main>
 
   <footer>
