--- a/locations.html
+++ b/locations.html
@@ -6,41 +6,39 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Radiation in New York, Tokyo, and Chernobyl</h1>
-    <nav>
-      <a href="index.html">Home</a> |
-      <a href="locations.html">Radiation in Cities</a>
-    </nav>
-  </header>
 
-  <main>
-    <section>
-      <h2>New York</h2>
-      <p>New York has background radiation from natural sources like radon gas, building materials, and cosmic rays due to its high-rise buildings. It also has some radiation from medical procedures due to its large healthcare industry.</p>
- <h2>New York</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Manhattan_at_Dusk_by_slonecker.jpg/640px-Manhattan_at_Dusk_by_slonecker.jpg" alt="New York City skyline" style="width: 100%; max-width: 500px; height: auto;">  
+<nav>
+  <a href="index.html">Home</a> |
+  <a href="locations.html">Radiation in Cities</a>
+</nav>
+
+<header>
+  <h1>Radiation Levels in New York, Tokyo, and Chernobyl</h1>
+</header>
+
+<main>
+  <section>
+    <h2>New York</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Manhattan_at_Dusk_by_slonecker.jpg/640px-Manhattan_at_Dusk_by_slonecker.jpg" alt="New York City skyline" style="width: 100%; max-width: 500px; height: auto;">
+    <p>New York has natural background radiation from cosmic rays, radon gas in older buildings, and medical procedures like X-rays and CT scans.</p>
   </section>
 
-    <section>
-      <h2>Tokyo</h2>
-      <p>Tokyo experienced increased radiation concerns after the Fukushima Daiichi nuclear disaster in 2011. Although Tokyo is about 140 miles from Fukushima, trace levels of radiation were detected in the city, leading to temporary public health alerts.</p>
-     <h2>Tokyo</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Tokyo_Tower_and_around_Skyscrapers.jpg/640px-Tokyo_Tower_and_around_Skyscrapers.jpg" alt="Tokyo city view" style="width: 100%; max-width: 500px; height: auto;">
-  <p>Tokyo experienced increased radiation concerns after the Fukushima Daiichi nuclear disaster in 2011...</p>
- </section>
+  <section>
+    <h2>Tokyo</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Tokyo_Tower_and_around_Skyscrapers.jpg/640px-Tokyo_Tower_and_around_Skyscrapers.jpg" alt="Tokyo city view" style="width: 100%; max-width: 500px; height: auto;">
+    <p>Tokyo had radiation concerns after the 2011 Fukushima accident. While levels rose temporarily, today Tokyo’s background radiation is very low and safe.</p>
+  </section>
 
-    <section>
-      <h2>Chernobyl</h2>
-      <p>Chernobyl, Ukraine, was the site of the worst nuclear power plant accident in history in 1986. The explosion released large amounts of radioactive materials into the environment, and the nearby area remains highly radioactive today.</p>
+  <section>
     <h2>Chernobyl</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Chernobyl_nuclear_power_plant%2C_Ukraine.jpg/640px-Chernobyl_nuclear_power_plant%2C_Ukraine.jpg" alt="Chernobyl nuclear plant" style="width: 100%; max-width: 500px; height: auto;">
-  <p>Chernobyl, Ukraine, was the site of the worst nuclear accident in history in 1986...</p>
-</section>
-  </main>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Chernobyl_nuclear_power_plant%2C_Ukraine.jpg/640px-Chernobyl_nuclear_power_plant%2C_Ukraine.jpg" alt="Chernobyl nuclear plant" style="width: 100%; max-width: 500px; height: auto;">
+    <p>Chernobyl is the site of the 1986 nuclear disaster. Even today, radiation levels in the Exclusion Zone are dangerous, although certain areas have become surprisingly resilient with wildlife.</p>
+  </section>
+</main>
 
-  <footer>
-    <p>© 2025 Nuclear Radiation Tracker</p>
-  </footer>
+<footer>
+  <p>© 2025 Radiation Awareness Project</p>
+</footer>
+
 </body>
 </html>
