--- a/index.html
+++ b/index.html
@@ -35,4 +35,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
   <script src="script.js"></script>
 </body>
+<nav>
+  <a href="index.html">Home</a> |
+  <a href="locations.html">Radiation in Cities</a>
+</nav>
 </html>
