--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<!-- Navigation -->
-<nav>
-  <a href="index.html">Home</a> |
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <a href="index.html">Home</a>
   <a href="locations.html">Radiation in Cities</a>
 </nav>
 
