--- a/index.html
+++ b/index.html
@@ -13,30 +13,44 @@
   <a href="locations.html">Radiation in Cities</a>
 </nav>
 
-<!-- Main content -->
+<!-- Main Content -->
 <header>
-  <h1>Welcome to the Radiation Awareness Website</h1>
+  <h1>Radiation Awareness</h1>
 </header>
 
 <main>
   <section>
     <h2>What is Radiation?</h2>
-    <p>Radiation is energy that comes from a source and travels through space. It can be natural (like sunlight) or artificial (like X-rays and nuclear power).</p>
+    <p>Radiation is energy that travels through space. Some types of radiation can be seen, like visible light, while others are invisible, like X-rays and gamma rays.</p>
   </section>
 
   <section>
     <h2>Types of Radiation</h2>
     <ul>
-      <li>Alpha particles</li>
-      <li>Beta particles</li>
-      <li>Gamma rays</li>
-      <li>Neutrons</li>
+      <li><strong>Alpha Particles:</strong> Heavy, positively charged particles that can be stopped by paper or skin.</li>
+      <li><strong>Beta Particles:</strong> Lighter, negatively charged particles that can penetrate further but are blocked by materials like plastic or glass.</li>
+      <li><strong>Gamma Rays:</strong> Highly penetrating electromagnetic radiation requiring dense materials like lead for shielding.</li>
     </ul>
   </section>
 
   <section>
-    <h2>Safety and Protection</h2>
-    <p>There are many ways to protect yourself from harmful radiation, including shielding, distance, and limiting exposure time.</p>
+    <h2>Sources of Radiation</h2>
+    <p>Natural sources include the sun, soil, rocks, and even food. Man-made sources include medical imaging (like X-rays), nuclear reactors, and industrial equipment.</p>
+  </section>
+
+  <section>
+    <h2>Radiation Safety</h2>
+    <p>Radiation exposure can be minimized by using three main principles: time, distance, and shielding.</p>
+    <ul>
+      <li>Limit the time spent near a radiation source.</li>
+      <li>Increase distance from the radiation source.</li>
+      <li>Use appropriate shielding to block or reduce radiation exposure.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Why Learn About Radiation?</h2>
+    <p>Understanding radiation helps promote safety and smart decision-making, especially for people working in healthcare, nuclear energy, and research industries.</p>
   </section>
 </main>
 
