--- a/locations.html
+++ b/locations.html
@@ -7,32 +7,39 @@
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Home</a> |
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <a href="index.html">Home</a>
   <a href="locations.html">Radiation in Cities</a>
 </nav>
 
+<!-- Main Content -->
 <header>
-  <h1>Radiation Levels in New York, Tokyo, and Chernobyl</h1>
+  <h1>Radiation in Cities</h1>
 </header>
 
 <main>
   <section>
-    <h2>New York</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Manhattan_at_Dusk_by_slonecker.jpg/640px-Manhattan_at_Dusk_by_slonecker.jpg" alt="New York City skyline" style="width: 100%; max-width: 500px; height: auto;">
-    <p>New York has natural background radiation from cosmic rays, radon gas in older buildings, and medical procedures like X-rays and CT scans.</p>
+    <h2>New York City</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Manhattan_skyline_from_Weehawken_NJ.jpg" alt="New York City Skyline" width="400">
+    <p>New York has low natural radiation levels. Most radiation exposure comes from medical sources like X-rays, CT scans, and cancer treatments in hospitals across the city.</p>
   </section>
 
   <section>
-    <h2>Tokyo</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Tokyo_Tower_and_around_Skyscrapers.jpg/640px-Tokyo_Tower_and_around_Skyscrapers.jpg" alt="Tokyo city view" style="width: 100%; max-width: 500px; height: auto;">
-    <p>Tokyo had radiation concerns after the 2011 Fukushima accident. While levels rose temporarily, today Tokyo’s background radiation is very low and safe.</p>
+    <h2>Tokyo, Japan</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Tokyo_Tower_and_Skyscrapers.jpg" alt="Tokyo City" width="400">
+    <p>Following the Fukushima nuclear incident in 2011, Tokyo saw minor radiation effects, but today it remains a safe city with very low background radiation levels, monitored carefully by the government.</p>
   </section>
 
   <section>
-    <h2>Chernobyl</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Chernobyl_nuclear_power_plant%2C_Ukraine.jpg/640px-Chernobyl_nuclear_power_plant%2C_Ukraine.jpg" alt="Chernobyl nuclear plant" style="width: 100%; max-width: 500px; height: auto;">
-    <p>Chernobyl is the site of the 1986 nuclear disaster. Even today, radiation levels in the Exclusion Zone are dangerous, although certain areas have become surprisingly resilient with wildlife.</p>
+    <h2>Chernobyl, Ukraine</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Chernobyl_pripyat_amusement_park_ferris_wheel.jpg" alt="Chernobyl Ferris Wheel" width="400">
+    <p>Chernobyl is the site of the most serious nuclear accident in history (1986). The surrounding exclusion zone still has high radiation levels, although some areas have been opened for short visits with proper safety precautions.</p>
+  </section>
+
+  <section style="margin-top: 30px;">
+    <h2>Learn More</h2>
+    <p>Visit the <a href="https://wuselena1998.github.io/Website-info-/" target="_blank">Radiation Information Homepage</a> for more detailed information!</p>
   </section>
 </main>
 
