--- a/locations.html
+++ b/locations.html
@@ -3,49 +3,87 @@
 <head>
   <meta charset="UTF-8">
   <title>Radiation in Cities</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f7fa;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+    h1 {
+      margin-top: 40px;
+      font-size: 3em;
+      color: #333;
+    }
+    nav {
+      margin: 30px 0;
+    }
+    nav a {
+      text-decoration: none;
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      margin: 0 10px;
+      border-radius: 8px;
+      transition: background-color 0.3s;
+      font-size: 18px;
+    }
+    nav a:hover {
+      background-color: #45a049;
+    }
+    .content {
+      width: 90%;
+      max-width: 1000px;
+      background: white;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      margin-bottom: 40px;
+    }
+    .city {
+      margin-bottom: 30px;
+    }
+    .city img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar">
-  <a href="index.html">Home</a>
-  <a href="locations.html">Radiation in Cities</a>
-</nav>
-
-<!-- Main Content -->
-<header>
   <h1>Radiation in Cities</h1>
-</header>
 
-<main>
-  <section>
-    <h2>New York City</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Manhattan_skyline_from_Weehawken_NJ.jpg" alt="New York City Skyline" width="400">
-    <p>New York has low natural radiation levels. Most radiation exposure comes from medical sources like X-rays, CT scans, and cancer treatments in hospitals across the city.</p>
-  </section>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="locations.html">Radiation in Cities</a>
+  </nav>
 
-  <section>
-    <h2>Tokyo, Japan</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Tokyo_Tower_and_Skyscrapers.jpg" alt="Tokyo City" width="400">
-    <p>Following the Fukushima nuclear incident in 2011, Tokyo saw minor radiation effects, but today it remains a safe city with very low background radiation levels, monitored carefully by the government.</p>
-  </section>
+  <div class="content">
+    <div class="city">
+      <h2>New York</h2>
+      <p>New York has relatively low levels of background radiation, primarily from natural sources and building materials. Occasional concerns arise from medical facilities and minor industrial uses, but public safety regulations keep exposure minimal.</p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/New_york_times_square-terabass.jpg" alt="New York City">
+    </div>
 
-  <section>
-    <h2>Chernobyl, Ukraine</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Chernobyl_pripyat_amusement_park_ferris_wheel.jpg" alt="Chernobyl Ferris Wheel" width="400">
-    <p>Chernobyl is the site of the most serious nuclear accident in history (1986). The surrounding exclusion zone still has high radiation levels, although some areas have been opened for short visits with proper safety precautions.</p>
-  </section>
+    <div class="city">
+      <h2>Tokyo</h2>
+      <p>Tokyo maintains low radiation levels since the Fukushima disaster, with extensive monitoring to ensure food, water, and environmental safety. Public areas are safe for residents and visitors, with international verification of radiation levels.</p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Tokyo_Tower_and_surroundings.jpg" alt="Tokyo City">
+    </div>
 
-  <section style="margin-top: 30px;">
-    <h2>Learn More</h2>
-    <p>Visit the <a href="https://wuselena1998.github.io/Website-info-/" target="_blank">Radiation Information Homepage</a> for more detailed information!</p>
-  </section>
-</main>
-
-<footer>
-  <p>© 2025 Radiation Awareness Project</p>
-</footer>
+    <div class="city">
+      <h2>Chernobyl</h2>
+      <p>Chernobyl remains one of the most radioactive sites in the world after the 1986 disaster. While some areas are open for limited tourism under strict controls, the Exclusion Zone still has regions where radiation is dangerously high and uninhabitable.</p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Chernobyl_Pripyat.jpg" alt="Chernobyl">
+    </div>
+  </div>
 
 </body>
 </html>
